# file

./: meson.build  meson_options.txt
magic/: file_wrap.py  meson.build
src/: Makefile.am  magic.h.in  meson.build
