magic_fragment_subdir = 'Magdir'
magic_fragment_dir = meson.current_source_dir() / magic_fragment_subdir
magic_ext = '.mgc'
magic_filename = 'magic' + magic_ext
magic_fragment_names = [
    'acorn',
    'adi',
    'adventure',
    'aes',
    'algol68',
    'allegro',
    'alliant',
    'amanda',
    'amigaos',
    'android',
    'animation',
    'aout',
    'apache',
    'apl',
    'apple',
    'application',
    'applix',
    'apt',
    'archive',
    'arm',
    'asf',
    'assembler',
    'asterix',
    'att3b',
    'audio',
    'avm',
    'basis',
    'beetle',
    'ber',
    'bflt',
    'bhl',
    'bioinformatics',
    'biosig',
    'blackberry',
    'blcr',
    'blender',
    'blit',
    'bm',
    'bout',
    'bsdi',
    'bsi',
    'btsnoop',
    'c-lang',
    'c64',
    'cad',
    'cafebabe',
    'cbor',
    'cddb',
    'chord',
    'cisco',
    'citrus',
    'clarion',
    'claris',
    'clipper',
    'clojure',
    'coff',
    'commands',
    'communications',
    'compress',
    'console',
    'convex',
    'coverage',
    'cracklib',
    'crypto',
    'ctags',
    'ctf',
    'cubemap',
    'cups',
    'dact',
    'database',
    'dataone',
    'dbpf',
    'der',
    'diamond',
    'dif',
    'diff',
    'digital',
    'dolby',
    'dump',
    'dyadic',
    'ebml',
    'edid',
    'editors',
    'efi',
    'elf',
    'encore',
    'epoc',
    'erlang',
    'espressif',
    'esri',
    'fcs',
    'filesystems',
    'finger',
    'flash',
    'flif',
    'fonts',
    'forth',
    'fortran',
    'frame',
    'freebsd',
    'fsav',
    'fusecompress',
    'games',
    'gcc',
    'gconv',
    'geo',
    'geos',
    'gimp',
    'git',
    'glibc',
    'gnome',
    'gnu',
    'gnumeric',
    'gpt',
    'gpu',
    'grace',
    'graphviz',
    'gringotts',
    'guile',
    'hardware',
    'hitachi-sh',
    'hp',
    'human68k',
    'ibm370',
    'ibm6000',
    'icc',
    'iff',
    'images',
    'inform',
    'intel',
    'interleaf',
    'island',
    'ispell',
    'isz',
    'java',
    'javascript',
    'jpeg',
    'karma',
    'kde',
    'keepass',
    'kerberos',
    'kicad',
    'kml',
    'lammps',
    'lecter',
    'lex',
    'lif',
    'linux',
    'lisp',
    'llvm',
    'locoscript',
    'lua',
    'luks',
    'm4',
    'mach',
    'macintosh',
    'macos',
    'magic',
    'mail.news',
    'make',
    'map',
    'maple',
    'marc21',
    'mathcad',
    'mathematica',
    'matroska',
    'mcrypt',
    'measure',
    'mercurial',
    'metastore',
    'meteorological',
    'microfocus',
    'mime',
    'mips',
    'mirage',
    'misctools',
    'mkid',
    'mlssa',
    'mmdf',
    'modem',
    'modulefile',
    'motorola',
    'mozilla',
    'msdos',
    'msooxml',
    'msvc',
    'msx',
    'mup',
    'music',
    'nasa',
    'natinst',
    'ncr',
    'neko',
    'netbsd',
    'netscape',
    'netware',
    'news',
    'nitpicker',
    'numpy',
    'oasis',
    'ocaml',
    'octave',
    'ole2compounddocs',
    'olf',
    'openfst',
    'opentimestamps',
    'os2',
    'os400',
    'os9',
    'osf1',
    'palm',
    'parix',
    'parrot',
    'pascal',
    'pbf',
    'pbm',
    'pc88',
    'pc98',
    'pcjr',
    'pdf',
    'pdp',
    'perl',
    'pgf',
    'pgp',
    'pgp-binary-keys',
    'pkgadd',
    'plan9',
    'plus5',
    'pmem',
    'polyml',
    'printer',
    'project',
    'psdbms',
    'psl',
    'pulsar',
    'pwsafe',
    'pyramid',
    'python',
    'qt',
    'revision',
    'riff',
    'rpi',
    'rpm',
    'rpmsg',
    'rtf',
    'rst',
    'ruby',
    'sc',
    'sccs',
    'scientific',
    'securitycerts',
    'selinux',
    'sendmail',
    'sequent',
    'sereal',
    'sgi',
    'sgml',
    'sharc',
    'sinclair',
    'sisu',
    'sketch',
    'smalltalk',
    'smile',
    'sniffer',
    'softquad',
    'sosi',
    'spec',
    'spectrum',
    'sql',
    'ssh',
    'ssl',
    'statistics',
    'sun',
    'sylk',
    'symbos',
    'sysex',
    'tcl',
    'teapot',
    'terminfo',
    'tex',
    'tgif',
    'ti-8x',
    'timezone',
    'tplink',
    'troff',
    'tuxedo',
    'typeset',
    'unicode',
    'unisig',
    'unknown',
    'usd',
    'uterus',
    'uuencode',
    'vacuum-cleaner',
    'varied.out',
    'varied.script',
    'vax',
    'vicar',
    'virtual',
    'virtutech',
    'visx',
    'vms',
    'vmware',
    'vorbis',
    'vxl',
    'warc',
    'web',
    'weak',
    'webassembly',
    'windows',
    'wireless',
    'wordprocessors',
    'wsdl',
    'x68000',
    'xdelta',
    'xenix',
    'xilinx',
    'xo65',
    'xwindows',
    'yara',
    'zfs',
    'zilog',
    'zip',
    'zyxel'
]
magic_fragments = []
foreach magic_fragment_name: magic_fragment_names
    magic_fragments += magic_fragment_dir / magic_fragment_name
endforeach
wrapper = find_program('file_wrap.py', native: true)
if meson.is_cross_build()
    file_cmd = find_program('file')
else
    file_cmd = file
endif
magic = custom_target(
    magic_filename, build_by_default: true,
    command: [wrapper, file, magic_fragment_dir],
    input: magic_fragments, output: magic_filename, depend_files: magic_fragments,
    install: true, install_dir: pkgdatadir
)
